<resources>
    <string name="app_name">RefrigerAcao</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_created">No account yet? Create one</string>
    <string name="txt_required">Required Field</string>
    <string name="valid_email">valid email id is required</string>
    <string name="loging_error">Error when trying to log in</string>

    <string name="title_activity_home">Home</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome">Welcome</string>
    <string name="save">SAVE</string>
    <string name="logout">LOG OUT</string>
    <string name="brand">Marca(Ex. Brastemp)</string>
    <string name="modelo">Modelo (Ex. BWS15AB 15kg)</string>
    <string name="description_title">O que está acontencendo?</string>
</resources>
